<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailWaifuActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_gravity="fill_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/waifu_image"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/content_description"
                tools:src="@tools:sample/avatars" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:padding="1dp"
                >

                <TableRow
                    android:background="#F48FB1"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="2dp">

                    <TextView
                        android:id="@+id/waifu_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/maria_mikhailovna_kujou"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                </TableRow>

                <TableRow
                    android:layout_marginTop="4dp"
                    android:padding="8dp"
                    android:layout_margin="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anime"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:id="@+id/waifu_anime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:ellipsize="none"
                        android:layout_weight="1"
                        android:text="@string/solitary_princess_alya_princess_alisa"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="4dp"
                    android:padding="8dp"
                    android:layout_margin="2dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/birth_date"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:id="@+id/waifu_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/november_7th"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="4dp"
                    android:padding="8dp"
                    android:layout_margin="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:id="@+id/waifu_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_16"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
                </TableRow>

            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/waifu_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="@string/description_waifu" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/content_description"
        android:tint="@android:color/white"
        app:srcCompat="@drawable/baseline_share_24" />

</FrameLayout>
