<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/waifu_image"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/content_description"
            tools:src="@tools:sample/avatars"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/texts_and_buttons_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/waifu_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/waifu_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/title_goes_here"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/waifu_anime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/secondary_text"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/waifu_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/waifu_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/tools_description"
            android:ellipsize="end"
            android:maxLines="3"
            android:textSize="12sp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/waifu_anime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <LinearLayout
            android:id="@+id/action_buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/waifu_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/check_wiki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_waifu_wiki"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/watch_anime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/watch_waifu_anime_mv_pv"
                android:textAllCaps="true" />

        </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
